objects/EUR_CRM_PRS_Seg_Aspect_Criteria__c.object
<CustomObject>
    <fields>
        <fullName>EUR_CRM_Brand_Building_Potential_ID__c</fullName>
        <formula>EUR_CRM_Brand_Building_Potential__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Brand Building Potential ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Brand_Building_Potential_Name__c</fullName>
        <formula>Text(EUR_CRM_Brand_Building_Potential__r.EUR_CRM_Segmentation_BBP_Aspect_Name__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Brand Building Potential  Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Brand_Building_Potential__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand Building Potential</label>
        <referenceTo>EUR_CRM_PRS_Seg_Aspect__c</referenceTo>
        <relationshipLabel>PRS Segmentation Aspect Criteria (EU) (Brand Building Potential)</relationshipLabel>
        <relationshipName>EUR_CRM_PRS_Seg_Aspect_Criteria_BBP</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Business_Potential_ID__c</fullName>
        <formula>EUR_CRM_Business_Potential__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Potential ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Business_Potential_Name__c</fullName>
        <formula>TEXT(EUR_CRM_Business_Potential__r.EUR_CRM_Segmentation_BP_Aspect_Name__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Potential Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Business_Potential__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Potential</label>
        <referenceTo>EUR_CRM_PRS_Seg_Aspect__c</referenceTo>
        <relationshipLabel>PRS Segmentation Aspect Criteria (EU) (Business Potential)</relationshipLabel>
        <relationshipName>EUR_CRM_PRS_Seg_Aspect_Criteria_BP</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Country_Code__c</fullName>
        <formula>EUR_CRM_PRS_Group_Outlet_Type__r.EUR_CRM_Country_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>EUR_CRM_Image_Level_ID__c</fullName>
        <formula>EUR_CRM_Image_Level__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Image Level ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Image_Level_Name__c</fullName>
        <formula>TEXT(EUR_CRM_Image_Level__r.EUR_CRM_Segmentation_IL_Aspect_Name__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Image Level Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Image_Level__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Image Level</label>
        <referenceTo>EUR_CRM_PRS_Seg_Aspect__c</referenceTo>
        <relationshipLabel>PRS Segmentation Aspect Criteria (EU) (Image Level)</relationshipLabel>
        <relationshipName>PRS_Segmentation_Aspect_Criteria_EU1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Is_Weight_Changed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Weight Changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Minimum_Weight__c</fullName>
        <label>Minimum Weight</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_PRS_Group_Outlet_Type__c</fullName>
        <label>Group Outlet Type</label>
        <referenceTo>EUR_CRM_PRS_Group_Outlet_Type__c</referenceTo>
        <relationshipLabel>PRS Segmentation Aspect Criteria (EU)</relationshipLabel>
        <relationshipName>EUR_CRM_PRS_Seg_Aspect_Criteria</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Volume_Potential_ID__c</fullName>
        <formula>EUR_CRM_Volume_Potential__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Volume Potential ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Volume_Potential_Name__c</fullName>
        <formula>TEXT(EUR_CRM_Volume_Potential__r.EUR_CRM_Segmentation_VP_Aspect_Name__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Volume Potential Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Volume_Potential__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Volume Potential</label>
        <referenceTo>EUR_CRM_PRS_Seg_Aspect__c</referenceTo>
        <relationshipLabel>PRS Segmentation Aspect Criteria (EU) (Volume Potential)</relationshipLabel>
        <relationshipName>PRS_Segmentation_Aspect_Criteria_EU</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>PRS Segmentation Aspect Criteria (EU)</label>
    <listViews>
        <fullName>EUR_BE_All_PRSSegAspectCriteria_View</fullName>
        <booleanFilter>(1 or 2 or 3 or 4) and 5</booleanFilter>
        <columns>NAME</columns>
        <columns>EUR_CRM_Country_Code__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>EUR_CRM_Brand_Building_Potential__c</columns>
        <columns>EUR_CRM_Business_Potential__c</columns>
        <columns>EUR_CRM_Image_Level__c</columns>
        <columns>EUR_CRM_Volume_Potential__c</columns>
        <columns>EUR_CRM_PRS_Group_Outlet_Type__c</columns>
        <columns>EUR_CRM_Is_Weight_Changed__c</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <columns>EUR_CRM_Minimum_Weight__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_PRS_Seg_Aspect_Criteria__c.EUR_PRS_Segmentation_Aspect_Criteria_BBP</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_PRS_Seg_Aspect_Criteria__c.EUR_PRS_Segmentation_Aspect_Criteria_BP</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_PRS_Seg_Aspect_Criteria__c.EUR_PRS_Segmentation_Aspect_Criteria_Image_Level</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_PRS_Seg_Aspect_Criteria__c.EUR_PRS_Segmentation_Aspect_Criteria_Volume_Potential</value>
        </filters>
        <filters>
            <field>EUR_CRM_Country_Code__c</field>
            <operation>equals</operation>
            <value>BE</value>
        </filters>
        <label>EUR BE All PRSSegAspectCriteria View</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_BE</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_BE_ON_PRSSegAspectCriteria_View</fullName>
        <booleanFilter>1 or 2</booleanFilter>
        <columns>EUR_CRM_Country_Code__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <columns>NAME</columns>
        <columns>EUR_CRM_PRS_Group_Outlet_Type__c</columns>
        <columns>EUR_CRM_Image_Level__c</columns>
        <columns>EUR_CRM_Image_Level_ID__c</columns>
        <columns>EUR_CRM_Image_Level_Name__c</columns>
        <columns>EUR_CRM_Volume_Potential__c</columns>
        <columns>EUR_CRM_Volume_Potential_ID__c</columns>
        <columns>EUR_CRM_Volume_Potential_Name__c</columns>
        <columns>EUR_CRM_Is_Weight_Changed__c</columns>
        <columns>EUR_CRM_Minimum_Weight__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_PRS_Seg_Aspect_Criteria__c.EUR_PRS_Segmentation_Aspect_Criteria_Image_Level</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_PRS_Seg_Aspect_Criteria__c.EUR_PRS_Segmentation_Aspect_Criteria_Volume_Potential</value>
        </filters>
        <label>EUR BE ON PRSSegAspectCriteria View</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_BE</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_BG_All_PRSSegAspectCriteria_View</fullName>
        <booleanFilter>1 or 2</booleanFilter>
        <columns>EUR_CRM_Country_Code__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>EUR_CRM_Brand_Building_Potential__c</columns>
        <columns>EUR_CRM_Business_Potential__c</columns>
        <columns>EUR_CRM_PRS_Group_Outlet_Type__c</columns>
        <columns>EUR_CRM_Is_Weight_Changed__c</columns>
        <columns>EUR_CRM_Minimum_Weight__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_PRS_Seg_Aspect_Criteria__c.EUR_PRS_Segmentation_Aspect_Criteria_BBP</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_PRS_Seg_Aspect_Criteria__c.EUR_PRS_Segmentation_Aspect_Criteria_BP</value>
        </filters>
        <label>EUR BG All PRSSegAspectCriteria View</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_BG</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>PRS-SAC-{0000000000}</displayFormat>
        <label>PRS Segmentation Aspect Criteria No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PRS Segmentation Aspect Criteria (EU)</pluralLabel>
    <recordTypes>
        <fullName>EUR_PRS_Segmentation_Aspect_Criteria_BBP</fullName>
        <active>true</active>
        <label>EUR PRS Segmentation Aspect Criteria - Brand Building Potential</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_PRS_Segmentation_Aspect_Criteria_BP</fullName>
        <active>true</active>
        <label>EUR PRS Segmentation Aspect Criteria - Business Potential</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_PRS_Segmentation_Aspect_Criteria_Image_Level</fullName>
        <active>true</active>
        <label>EUR PRS Segmentation Aspect Criteria - Image Level</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_PRS_Segmentation_Aspect_Criteria_Volume_Potential</fullName>
        <active>true</active>
        <label>EUR PRS Segmentation Aspect Criteria - Volume Potential</label>
    </recordTypes>
    <recordTypes>
        <fullName>PRS_Segmentation_Aspect_Criteria</fullName>
        <active>true</active>
        <label>PRS Segmentation Aspect Criteria</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>